
2017-08-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal_valgrind: changed default name for valgrind log files
	  to show the actual compilation;
	  changed for easier applying of suppression rules;
	  don't use valgrind in atlocal itself for "cobcrun --runtime-conf"

2017-08-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_valgrind, atlocal_win: set COBCRUN_DIRECT
	  used for running executables through tools (especially valgrind)
	* testsuite.src: COBCRUN_DIRECT as prefix for running generated executables

2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_valgrind, atlocal_win: export COB_HAS_64_BIT_POINTER
	* testsuite.src/data_pointer.at, testsuite.src/listings.at: check
	  COB_HAS_64_BIT_POINTER instead of indirect test from COBOL

2017-07-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_misc.at, testsuite.src/data_binary.at: changed
	  subsequent compilations in same folder to use a different output name

2017-07-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.at, Makefile.am: added testsuite.src/syn_refmod.at
	* testsuite.src/run_refmod.at, testsuite.src/syn_refmod.at: moved
	  compiler tests for reference modification to its own source and
	  added check for [no-]constant-folding out of bounds

2017-06-16  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Corrected Replacement w/o strings test.

2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* ChangeLog: moved cobol85 entries to cobol85/ChangeLog

2017-06-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added .PHONY to correctly declare logical targets that
	  always have to be executed and don't result in a file

2017-05-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_misc.at: set COB_EXIT_WAIT=0 in all testcases
	  where we do extended screenio
