@@ -96,10 +96,15 @@ PATHSEP=":"
 # Helper script to unify listings (repleace version, date, time)
 UNIFY_LISTING="${abs_srcdir}/listings-sed.sh"
 
-# unset all environment variables that are used in libcob for runtime configuration
-for cobenv in $($COBCRUN_WITHOUT_VG --runtime-conf | grep COB_ | cut -d: -f2); do unset $cobenv; done
+# unset all environment variables that are used in libcob
+# for runtime configuration
+COB_RUNTIME_CONFIG="${abs_top_srcdir}/config/runtime_empty.cfg"
+for cobenv in $($COBCRUN_WITHOUT_VG --runtime-conf | grep COB_ | cut -d: -f2); \
+	do unset $cobenv; \
+done
 
-# For running the testsuite in Cygwin with non-Cygwin binaries we need a wrapper function
+# For running the testsuite in Cygwin with non-Cygwin binaries
+# we need a wrapper function
 _return_path () {
 	echo "$1"
 }
