@@ -53,10 +53,15 @@ export PATH
 # Helper script to unify listings (repleace version, date, time)
 UNIFY_LISTING="$COB_SRC_PATH/tests/listings-sed.sh"
 
-# unset all environment variables that are used in libcob for runtime configuration
-for cobenv in $($COBCRUN --runtime-conf | grep COB_ | cut -d: -f2); do unset $cobenv; done
+# unset all environment variables that are used in libcob
+# for runtime configuration
+COB_RUNTIME_CONFIG="${abs_top_srcdir}/config/runtime_empty.cfg"
+for cobenv in $($COBCRUN --runtime-conf | grep COB_ | cut -d: -f2); \
+	do unset $cobenv; \
+done
 
-# For running the testsuite in Cygwin with non-Cygwin binaries (for example Visual C builds)
+# For running the testsuite in Cygwin with non-Cygwin binaries
+# (for example Visual C builds) we need a wrapper function
 # (not needed for running the testsuite with MSYS as this translates the path)
 _return_path () {
 	# For later reference only
